results-panes: Fixed expanding and collapsing buttons (except expand unmarked for flexible criteria)

--- a/app/assets/stylesheets/grader.scss
+++ b/app/assets/stylesheets/grader.scss
@@ -371,7 +371,6 @@ ul.annotation_text_list {
     }
 
     .mark_description {
-      margin-left: 2.5em;
     }
   }
 
@@ -501,8 +500,9 @@ ul.annotation_text_list {
 
 .flexible_criterion_info {
   padding-left: 10px;
-  padding-bottom: 2px;
+  padding-bottom: 5px;
   margin-left: 5px;
+  margin-top: 3px
 }
 
 .flexible_criterion_description {
